[gd_scene load_steps=13 format=2]

[ext_resource path="res://Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/main_ship/Main Ship - Base - Full health.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://art/effects/Retro Impact Effect Pack 4 A.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 256, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "base",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "die",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 20 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
bullet_scene = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 9 )
animation = "base"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
